Fetching meme data with useEffect() hook from imgflip API; fixed meme text wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,7 @@ nav h3 {
   line-height: 39px;
   letter-spacing: 1px;
   text-align: center;
+  white-space: nowrap;
   position: absolute;
   left: 50%;
   transform: translate(-50%);
